--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
-	# qmake PREFIX=/usr# Uncomment this line for use without Qt Creator
+	qmake
 
 	touch configure-stamp
 
@@ -23,7 +23,7 @@ build-stamp: configure-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
-	# $(MAKE) # Uncomment this line for use without Qt Creator
+	$(MAKE)
 	#docbook-to-man debian/mt-toggles.sgml > mt-toggles.1
 
 	touch $@
