--- a/debian/control
+++ b/debian/control
@@ -64,3 +64,10 @@ Architecture: any
 Priority: optional
 Depends: mt-toggles
 Description: Dual-3G-2G mode switcher toggle for MT-Toggles
+
+Package: nfc-toggle
+Section: user/other
+Architecture: any
+Priority: optional
+Depends: mt-toggles
+Description: NFC toggle for MT-Toggles
